# cinch

./: .cinchbranches  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cinch.muse  INSTALL.md  README.devel  README.md  README.rst  VERSION  __init__.py  distclean.cmake  documentation.html  download.html  driver.py  index.html  info.cmake  insource.cmake  muse_manifest.xml  people.html  setup.py  sitemap.xml  subproject.cmake
YYY/: README.md
YYY/ngccli/: __init__.py  factory.py
YYY/ngccli/services/cpp_drivers/: cppheader.py
YYY/ngccli/services/doc_drivers/: utils.py
arch/: gnu.cmake
auxiliary/: check_collections.h  cinchdevel.h  cinchtest.h  gtest-init.h  listener.h  output.h  test-hpx.cc  test-init.h  test-legion.cc  test-mpi.cc  test-mpilegion.cc  test-standard.cc
auxiliary/gtest/: gtest-legion.cc  gtest-mpi.cc  gtest-mpilegion.cc  gtest-standard.cc  output.h
bootstrap/: top-level.txt
ccli/: devel.md  driver.py  factory.py  setup.py  utils.py
ccli/ccli/: devel.md
ccli/ccli/services/: unit.py
ccli/ccli/services/brand_drivers/: walk.py
ccli/ccli/services/cinch_drivers/: templates.py
ccli/services/: brand.py  cc.py  cinch.py  cmake.py  cxx.py  git.py  service_utils.py  unit.py
ccli/services/brand_drivers/: __init__.py  utils.py
ccli/services/cc_drivers/: ccheader.py  ccsource.py  ccstandalone.py  default.py  generate.py
ccli/services/cinch_drivers/: create_project.py  default.py  templates.py
ccli/services/cmake_drivers/: default.py  templates.py
ccli/services/cxx_drivers/: cxxheader.py  cxxsource.py  default.py
ccli/services/doc_drivers/: document.py  utils.py  walk.py
ccli/services/git_drivers/: process.py  utils.py
ccli/services/unit_drivers/: default.py  generate.py  unit.py
cinch/: clog.h  colors.h  ctest.h  output.h  runtime.cc  runtime.h
cinch/runtime/: runtime.cc  runtime.h
cinch/test/: CMakeLists.txt  clog_test.cc
cinch/utils/: CMakeLists.txt  cinchlog.h
cli/: .gitignore  README.devel  README.md  README.rst  setup.py
cli/cinch/: clidriver.py  devel.md  factory.py  utils.py
cli/cinch/services/: brand.py  cpp.py  cxx.py  doc.py  drivers.md  unit.py
cli/cinch/services/brand_drivers/: utils.py  walk.py
cli/cinch/services/cpp_drivers/: cpp.md  cppheader.py  cppsource.py
cli/cinch/services/cxx_drivers/: cxxheader.py  cxxsource.py  default.py
cli/cinch/services/doc_drivers/: document.py  utils.py  walk.py
cli/ngccli/services/: unit.py
cli/ngccli/services/cpp_drivers/: default.py
cli/ngccli/services/doc_drivers/: walk.py
cli/utils/: dev.sh
cmake/: FindCaliper.cmake  FindCereal.cmake  FindCinch.cmake  FindClang.cmake  FindEOSPAC.cmake  FindEXODUSII.cmake  FindFLECSI.cmake  FindFleCSI.cmake  FindGASNet.cmake  FindGFlags.cmake  FindGraphviz.cmake  FindH5hut.cmake  FindHDF5.cmake  FindHYPRE.cmake  FindHypre.cmake  FindKokkos.cmake  FindLAPACKE.cmake  FindLLVM.cmake  FindLegion.cmake  FindMETIS.cmake  FindNGC.cmake  FindPandoc.cmake  FindParMETIS.cmake  FindPip3.cmake  FindSCOTCH.cmake  FindScotchPT.cmake  FindThrust.cmake  MultiLists.txt  PFUnitLists.txt  ProjectLists.txt  SourceLists.txt  application.cmake  boost.cmake  c99.cmake  caliper.cmake  capture.cmake  capture_env_mods  capture_environment  cinch.cmake  cinch_install_headers.cmake  (+52 more)
cmake/detail/: test-inputs.cmake  test-options.cmake  test-policies.cmake  test-properties.cmake
config/: cinch-config.h.in  cinch.h.in
css/: documentation.css  download.css  index.css  master_main.css  people.css  site_global.css
developer/: README.md  VERSIONING.md
doc/: cinchheader.tex  cinchheader.tex.in  cinchtitle.tex  cinchtitle.tex.in  ugconfig.py
doxygen/: doxygen.conf.in
env/: cinchenv.csh  cinchenv.csh.in  cinchenv.sh  cinchenv.sh.in  devel.csh  devel.sh
git/: git-subupdate  gitignore-standard
git/scripts/: git-sclone  git-spull  git-supdate
gtest-auxilary/: cinchtest.h  listener.h  output.h
gtest-auxiliary/: cinchtest.h  gtest-init.h  gtest-legion.cc  gtest-mpi.cc  gtest-mpilegion.cc
gtest-runtime/: gtest-mpi.cc
logging/: CLOG.md  CMakeLists.txt  README.md  cinchlog.h  cinchlog.h.bak  clog.md  clog_test.cc
md/: interface.md
move-ccli/: README.md  README.rst
move-ccli/ccli/services/: __init__.py  brand.py  cinch.py  cmake.py  doc.py  drivers.md
move-ccli/ccli/services/cc_drivers/: ccheader.py  ccsource.py  ccstandalone.py  generate.py
move-ccli/ccli/services/cmake_drivers/: generate.py
move-ccli/ccli/services/doc_drivers/: __init__.py  doc.md  walk.py
move-ccli/ccli/services/git_drivers/: process.py  utils.py
move-ccli/ccli/services/unit_drivers/: generate.py  simple.py
ngccli/: __init__.py  base.py  clidriver.py  factory.py  utils.py
ngccli/services/: __init__.py  cpp.py  doc.py  source.py  unit.py
ngccli/services/doc_drivers/: document.py  walk.py
ngccli/services/source_drivers/: __init__.py  default.py
reporting/: cinchlog.h  cinchreporting.h  colors.h
services/: doc.py  unit.py
services/cxx_drivers/: cxxheader.py
services/doc_drivers/: doc.md  document.py
tex/: addtolength.tex  firstpageempty.tex  maketitle.tex  pagebreak.tex  pageempty.tex  required.tex  titlebreak.tex
utils/: update-submodules  version
